correção na referência do botão serviços

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </p>
 
           <div id="cta_buttons">
-            <a href="#contato" class="btn-default"> Serviços </a>
+            <a href="#servico" class="btn-default"> Serviços </a>
 
             <a href="tel:+55555555555" id="phone_button">
               <button class="btn-default">
